tests/tokenizer/string_escape_at_eof.expected
<string>:1:1: error: unterminated string literal (escape at end)
"escape at end: \
^^^^^^^^^^^^^^^^^
